--- a/quanteda_script.Rmd
+++ b/quanteda_script.Rmd
@@ -106,22 +106,68 @@ library(manifestoR)
 
 mp_setapikey(key.file = "manifesto_apikey.txt")
 
-available_uk<- mp_corpus(countryname == "United Kingdom" & date == "201912")
+available_uk<- mp_corpus(countryname == "United Kingdom" & date == "201912") #function to download docs from manifesto project, we chose last manifestos in UK 
 
 available_uk #we have 10 docs
 names(available_uk)
 
-
-quanteda_corpus <- available_uk %>%
+manifesto_corpus <- available_uk %>%
   as.data.frame(with.meta = TRUE) %>%
-  corpus(docid_field = "manifesto_id", unique_docnames = FALSE) ## quanteda's corpus function
-quanteda_corpus
+  corpus(docid_field = "manifesto_id", unique_docnames = FALSE) %>% 
+  #docvars(field = "cmp_code") %>% 
+  corpus() ## quanteda's corpus function: Creates a corpus object from available sources
 
-quanteda_corpus %>%
-  docvars() %>%
-  names() #
+manifesto_corpus
+
+manifesto_corpus %>%
+  docvars() %>% 
+  names() #meta data information
+
 
 ```
+
+#Subsetting the Corpus
+
+We will do our sentiment analysis only with some parties in the English parliament, so we choose only two parties. We will take the Sinn Féin (We Ourselves) party and Scottish National Party (Scottish National Party). 
+
+
+```{r}
+manifesto_corpus %>%
+  corpus_subset(party == 51210) %>%
+  corpus_subset(party == 51902) %>% 
+  as.character() %>%
+  head(5)
+```
+#Tokenization and Document-Feature-Matrix
+
+Tokenization is particularly important for pre-processing and cleaning the texts. One can easily remove nubmers, punctuation or stopwords. Moreover, it is simple to transform all text to lower case or stem words.
+
+```{r}
+tokenized_manifesto <- manifesto_corpus %>%
+  tokens() %>%
+  head(2)
+
+tokenized_manifesto %>%
+  tokens(remove_punct = TRUE, remove_numbers = TRUE) %>%
+  tokens_tolower() %>%
+  tokens_remove(stopwords("english")) %>%
+  tokens_wordstem() %>%
+  head(4)
+
+```
+
+#Constructing a document-feature-matrix with dfm
+
+```{r}
+manifesto_dfm <- tokenized_manifesto %>% 
+  dfm()
+
+dfm_subset(!(cmp_code %in% c("H", "", "0", "000", NA))) %>% #drop all quasi-sentences with headline codes (“H”), uncoded (“0”,“000”) and with codes missing (NA). 
+  dfm_group(cmp_code) %>% #combine all quasi-sentences coded with the same code to one document
+  dfm_weight(scheme = "prop") %>% # Term frequencies can be transformed using the dfm_weight function. Here, we use it to calculate the proportion of words per document (scheme = "prop").
+  dfm_subset(cmp_code %in% c("501", "502", "301", "411")) #e then subset the dfm for four features of four specific codes.
+```
+
 
 ###CREDITS 
 
