--- a/quanteda_script.Rmd
+++ b/quanteda_script.Rmd
@@ -27,6 +27,7 @@ Here are the main packages you'll need to install, plus some recommended ones th
 ```{r cars}
 library(tidyverse)
 library(quanteda)
+
 library(quanteda.textmodels) #explain why there are three other packages - sister packages to complete quanteda tools
 library(quanteda.textplots)
 library(quanteda.textstats)
@@ -106,7 +107,7 @@ library(manifestoR)
 
 mp_setapikey(key.file = "manifesto_apikey.txt")
 
-available_uk<- mp_corpus(countryname == "United Kingdom" & date == "201912") #function to download docs from manifesto project, we chose last manifestos in UK 
+available_uk<- mp_corpus(countryname == "United Kingdom") #function to download docs from manifesto project, we chose last manifestos in UK 
 
 available_uk #we have 10 docs
 names(available_uk)
@@ -128,31 +129,29 @@ manifesto_corpus %>%
 
 #Subsetting the Corpus
 
-We will do our sentiment analysis only with some parties in the English parliament, so we choose only two parties. We will take the Sinn Féin (We Ourselves) party and Scottish National Party (Scottish National Party). 
+We will do our sentiment analysis only with some parties in the English parliament, so we choose only two parties. We will take the Scottish National Party. 
 
 
 ```{r}
-manifesto_corpus %>%
-  corpus_subset(party == 51210) %>%
-  corpus_subset(party == 51902) %>% 
-  as.character() %>%
-  head(5)
+scotland_corpus <- manifesto_corpus %>%
+  corpus_subset(party == "51902") %>%
+  as.character()
+
 ```
+
 #Tokenization and Document-Feature-Matrix
 
 Tokenization is particularly important for pre-processing and cleaning the texts. One can easily remove nubmers, punctuation or stopwords. Moreover, it is simple to transform all text to lower case or stem words.
 
 ```{r}
-tokenized_manifesto <- manifesto_corpus %>%
-  tokens() %>%
-  head(2)
+tokenized_manifesto <- scotland_corpus %>%
+  tokens()
 
 tokenized_manifesto %>%
   tokens(remove_punct = TRUE, remove_numbers = TRUE) %>%
   tokens_tolower() %>%
   tokens_remove(stopwords("english")) %>%
-  tokens_wordstem() %>%
-  head(4)
+  tokens_wordstem()
 
 ```
 
@@ -162,10 +161,34 @@ tokenized_manifesto %>%
 manifesto_dfm <- tokenized_manifesto %>% 
   dfm()
 
-dfm_subset(!(cmp_code %in% c("H", "", "0", "000", NA))) %>% #drop all quasi-sentences with headline codes (“H”), uncoded (“0”,“000”) and with codes missing (NA). 
-  dfm_group(cmp_code) %>% #combine all quasi-sentences coded with the same code to one document
-  dfm_weight(scheme = "prop") %>% # Term frequencies can be transformed using the dfm_weight function. Here, we use it to calculate the proportion of words per document (scheme = "prop").
-  dfm_subset(cmp_code %in% c("501", "502", "301", "411")) #e then subset the dfm for four features of four specific codes.
+manifesto_dfm %>% 
+  dfm_subset(!(cmp_code %in% c("H", "", "0", "000", NA))) %>% 
+  #dfm_group(cmp_code) %>% 
+  dfm_weight(scheme = "prop") #%>% 
+  #dfm_subset(cmp_code %in% c("501", "502", "301", "411")) 
+
+```
+
+What did we do here?
+
+- drop all quasi-sentences with headline codes (“H”), uncoded (“0”,“000”) and with codes missing (NA). 
+- combine all quasi-sentences coded with the same code to one document
+- Term frequencies can be transformed using the dfm_weight function. Here, we use it to calculate the proportion of words per document (scheme = "prop").
+- then subset the dfm for four features of four specific codes.
+
+#Plotting frequencies
+```{r}
+feature_frequencies_cat <- manifesto_dfm %>% textstat_frequency(n = 10, group = cmp_code)
+
+feature_frequencies_cat %>%
+  mutate(cmp_code = factor(group, labels = c("Decentralisation", "Technology & Infrastructure", "Environmental Protection", "Culture"))) %>%
+  ggplot(aes(x = reorder(feature, frequency), y = frequency, fill = cmp_code)) +
+  geom_col(show.legend = FALSE) +
+  labs(x = NULL, y = "share of words per category") +
+  facet_wrap(~cmp_code, ncol = 2, scales = "free") +
+  coord_flip()
+```
+
 ```
 
 
