--- a/quanteda_script.Rmd
+++ b/quanteda_script.Rmd
@@ -12,35 +12,45 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Welcome to our tutorial!
 
-In the following minutes we will go through the basics of the **Quanteda** package and make sense of how quantitative text analysis work in R. 
+In the following minutes we will go through the basics of the **Quanteda** package and make sense of what quantitative text analysis is in practice, with some (hopefully) interesting examples. 
 
-- what you'll find in the following tutorial 
-- how we built it "we tried to add as much useful information as possible but here we will only show sentiment analysis with the ManifestoR database", why we chose to do sentiment analysis ???
-- we will use the ManifestoR library to show some functionalities and how to work with text data
+In this session you will learn to: 
+* load and work with text databases
+* create the basic elements for a proper QTA, namely Corpus, Tokens, and a Document-Feature Matrix
+* proceed with some statistical analyses of texts
+* try out some unsupervised learning bites, in particular sentiment analysis
+
+As already mentioned in the slides, we will make use of the Manifesto Project Database (see more on https://manifesto-project.wzb.eu/). 
 
 Let's start!
 
-## Basics
+##Necessary packages
 
-Here are the main packages you'll need to install, plus some recommended ones that can help to extend or complete some functionalities (e.g. readtext takes files and returns them in a type of data.frame that can be used directly with the corpus() constructor function). 
+Here you find the main packages you'll need to install, plus some recommended ones that can help to extend or complete some functionalities (e.g. readtext takes files and returns them in a type of data.frame that can be used directly with the corpus() constructor function).
 
-```{r cars}
+```{r}
+install.packages("tidyverse", "quanteda")
+```
+
+
+```{r}
+
 library(tidyverse)
 library(quanteda)
 
-library(quanteda.textmodels) #explain why there are three other packages - sister packages to complete quanteda tools
+library(quanteda.textmodels) 
 library(quanteda.textplots)
 library(quanteda.textstats)
-library(quanteda.sentiment)
 
-library(readtext) #readtext package to read in different types of text data
-
+library(readtext)
 
 ```
 
 # Data Importing
 
-To import data we make use of the **readtext** package. 
+We uploaded on Github the csv version of the Manifesto Project Dataset (latest version), so that you can easily download it and upload it using the following commands. 
+
+To import data we use the **readtext** package. 
 
 ## Pre-formatted files
 
@@ -86,37 +96,36 @@ str(dat_eu)
 #If you are using Windows, you need might need to specify the encoding of the file by adding encoding = "utf-8". In this case, imported texts might appear like <U+4E16><U+754C><U+4EBA><U+6743> but they indicate that Unicode characters are imported correctly.
 ```
 
-These are just some of the multiple ways to load data with quanteda. For furher information (e.g. you may want to know how to upload text with different encodings) take a look at https://tutorials.quanteda.io/import-data/. 
+These are just some of the multiple ways to load data with quanteda. For furher information (if you may want to know how to upload text with different encodings) take a look at https://tutorials.quanteda.io/import-data/. 
 
-TO INCLUDE: how to work with Corpus, how to work with Tokens, how to work with DFM and some statistical analyses
 
-#Working with ManifestoR
+#Working with ManifestoR - Corpus
 
-load manifestoR package: for this package we need an API key and some specific functions to check availability of data.
-WHAT IS MANIFESTOR? and what is manifesto corpus? 
-"The Manifesto Corpus is a digital text collection of electoral programs based on the collection and coding that was conducted for the generation of the Manifesto Project Main dataset.
-The Manifesto Corpus contains three types of informations: machine-readable texts, meta-information for each document (such as language and title), and (for some documents) annotations/codes on the quasi-sentence level.
-----> EXPLAIN CMP CODES!
+To load the Manifesto Corpus, which is a subclass of a `Corpus` object - the one we need to perform a text analysis - we need to load a specific package ManifestoR. 
 
-we will use data from the latest elections in united kingdom to make a sentiment analysis
+With the function `mp_setapikey` we can easily load the API key that is needed in order to access the website. We then use the `mp_corpus` function to access documents in the ManifestoCorpus that we can directly use for our analysis.  
+
+As we know from the presentation, a Corpus consists of many documents. In the `ManifestoCorpus`, documents can be indexed via their `manifesto_id`, which is an identification code formed by the CMP party code, an underscore, and either the election year, if unambigous, or the election year and month) or via their position in the corpus. 
+
+We will use data from the election programmes in the United Kingdom to perform basic QTA and a sentiment analysis. 
+
+We use the quanteda `corpus()` to create the Corpus object from available sources, letting it auto-generate document names based on the manifesto_id and a within document running number, as we can see in `corpus(docid_field = "manifesto_id", unique_docnames = FALSE)`. 
+
 ```{r}
-#library(tm)
-#library(NLP)
-
 library(manifestoR)
 
 mp_setapikey(key.file = "manifesto_apikey.txt")
 
-available_uk<- mp_corpus(countryname == "United Kingdom") #function to download docs from manifesto project, we chose last manifestos in UK 
- 
-available_uk #71 docs
-names(available_uk)
+uk_election_programmes <- mp_corpus(countryname == "United Kingdom") 
 
-manifesto_corpus <- available_uk %>%
+uk_election_programmes
+names(uk_election_programmes)
+
+manifesto_corpus <- uk_election_programmes %>%
   as.data.frame(with.meta = TRUE) %>%
   corpus(docid_field = "manifesto_id", unique_docnames = FALSE) %>% 
   #docvars(field = "cmp_code") %>% 
-  corpus() ## quanteda's corpus function: Creates a corpus object from available sources
+  corpus() 
 
 manifesto_corpus
 
@@ -129,7 +138,9 @@ manifesto_corpus %>%
 
 #Subsetting the Corpus
 
-We will do our sentiment analysis only with some parties in the English parliament, so we choose only two parties. We will take the Scottish National Party. 
+We will do the following analyses using only one party in the English parliament. We will take the Scottish National Party, subsetting the corpus with `corpus_subset()` and indicating a logical condition corresponding to the code of the party. 
+
+METTI LINK PER TROVARE I CODICI DEI PARTIES
 
 
 ```{r}
@@ -138,28 +149,32 @@ scotland_corpus <- manifesto_corpus %>%
 
 ```
 
-#Tokenization and Document-Feature-Matrix
+#Tokenization
 
-Tokenization is particularly important for pre-processing and cleaning the texts. One can easily remove nubmers, punctuation or stopwords. Moreover, it is simple to transform all text to lower case or stem words.
+Tokenization is particularly important for pre-processing and cleaning the texts. It is possible to easily remove numbers, punctuation or stopwords. Moreover, it is simple to transform all text to lower case or stem words. 
 
 ```{r}
 tokenized_manifesto <- scotland_corpus %>%
   tokens() %>% 
   tokens(remove_punct = TRUE, remove_numbers = TRUE) %>%
   tokens_tolower() %>%
-  tokens_remove(stopwords("english")) %>%
+  tokens_remove(stopwords("english")) %>% ##remove will 
   tokens_wordstem()
 
+tokenized_manifesto
 ```
 
-#Constructing a document-feature-matrix with dfm
+#Document-Feature-Matrix
 
--function dfm()
+We are now able to construct our document-feature matrix. 
+
+The ManifestoCorpus requires also some specific polishing regarding cmp codes and the quasi-sentences structuring. 
+
+In this code snippet we follow this process: 
 - drop all quasi-sentences with headline codes (“H”), uncoded (“0”,“000”) and with codes missing (NA). 
-- combine all quasi-sentences coded with the same code to one document
-- Term frequencies can be transformed using the dfm_weight function. Here, we use it to calculate the proportion of words per document (scheme = "prop").
-- then subset the dfm for two features of four specific codes: 108: european union positive, 110: european union negative, 301: federalism
-
+- group all quasi-sentences coded with the same code to one document
+- transform term frequencies using the `dfm_weight()` function that we use to calculate the proportion of words per document `(scheme = "prop")`.
+- subset the dfm features for three specific codes: **European Union: Positive** (108), **European Union: Negative** (110) and **Federalism** (301). 
 
 ```{r}
 manifesto_dfm <- tokenized_manifesto %>% 
@@ -169,11 +184,14 @@ manifesto_dfm <- tokenized_manifesto %>%
   dfm_weight(scheme = "prop") %>% 
   dfm_subset(cmp_code %in% c("301", "110", "108")) 
 
+manifesto_dfm
 ```
 
 
 #Plotting frequencies
 
+If you may want to plot the most frequent terms, then the textstat_frequency() function fits perfectly for you. It simply extracts the most frequent terms (here grouped by cmp_code) and converts them to a data.frame that can be plotted with the ggplot package
+.
 ```{r}
 feature_frequencies_cat <- manifesto_dfm %>% textstat_frequency(n = 10, group = cmp_code)
 
@@ -182,8 +200,11 @@ feature_frequencies_cat %>%
   ggplot(aes(x = reorder(feature, frequency), y = frequency, fill = cmp_code)) +
   geom_col(show.legend = FALSE) +
   labs(x = NULL, y = "share of words per category") +
-  facet_wrap(~cmp_code, ncol = 2, scales = "free") +
+  facet_wrap(~cmp_code, ncol = 2, scales = "free_y") +
   coord_flip()
+
+
+##add counts
 
 ```
 
@@ -209,33 +230,49 @@ Quanteda has integrated a sentiment dictionary constructed by Young & Soroka (20
 
 
 ```{r}
-brexit_tokens <- scotland_corpus %>%
-  tokens()
-  tokens_select("Brexit", selection = "keep", valuetype = "glob", case_insensitive = TRUE, window = 10, padding = FALSE, verbose = TRUE)
+brexit_tokens <- manifesto_corpus %>%
+  #corpus_subset(party %in% c("513202", "51420")) %>%  #labour and liberal 
+  tokens() %>% 
+  tokens_select("Brexit", selection = "keep", window = 10, padding = FALSE, verbose = TRUE)
 
-brexit_dfm <- brexit_tokens %>%
+brexit_sent <- brexit_tokens %>%
   dfm() %>% 
-  dfm_lookup(data_dictionary_LSD2015) 
+  dfm_lookup(data_dictionary_LSD2015[1:2]) %>% 
+  dfm_group(party)
 
-brexit_dfm %>% 
-  dfm_group(date)
+print(brexit_sent)
+  
 
 ```
 
+---> PLOT SENTIMENT ANALYSIS
 
 Quanteda (and its “sister”-packages quanteda.textstats, quanteda.textplots, quanteda.textmodels) has many more functions. In particular the textstat_* functions of quanteda.textstats are powerful and can well applied to manifestos.
 
-#other visualizations??  
+
 
 ```{r}
+dict_output <- convert(brexit_sent, to = "data.frame")
 
+dict_output$sent_score <- log((dict_output$positive + 0.5) / (dict_output$negative + 0.5))
+dict_output <- cbind(dict_output, docvars(manifesto_corpus))
+
+tplot_sent <- ggplot(dict_output, aes(x =doc_id , y = reorder(sent_score)) + geom_point(size = 3) +
+coord_flip() + labs(x = "Parties", y = "Estimated sentiment"))
+
+tplot_sent
 ```
 
 
 ###CREDITS 
 
 https://tutorials.quanteda.io
-https://manifesto-project.wzb.eu/information/documents/corpus
 https://github.com/quanteda
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+Burst, Tobias / Krause, Werner / Lehmann, Pola / Lewandowski, Jirka / Matthieß, Theres / Merz, Nicolas / Regel, Sven / Zehnter, Lisa (2021): Manifesto Corpus. Version: 2021-1. Berlin: WZB Berlin Social Science Center.
+
+Pennings, Paul / Keman, Hans, Vrije Universiteit Amsterdam, Comparative Electronic Manifestos Project in cooperation with the Social Science Research Centre Berlin (Andrea Volkens, Hans-Dieter Klingemann), the Zentralarchiv für empirische Sozialforschung (GESIS), and the Manifesto Research Group (chairman: Ian Budge) (2006)
+
+Volkens, Andrea / Burst, Tobias / Krause, Werner / Lehmann, Pola / Matthieß Theres / Regel, Sven / Weßels, Bernhard / Zehnter, Lisa (2021): The Manifesto Data Collection. Manifesto Project (MRG/CMP/MARPOR). Version 2021a. Berlin: Wissenschaftszentrum Berlin für Sozialforschung (WZB). https://doi.org/10.25522/manifesto.mpds.2021a
+
+Burst, Tobias / Krause, Werner / Lehmann, Pola / Matthieß Theres / Merz, Nicolas / Regel, Sven / Weßels, Bernhard / Zehnter, Lisa (2020): The Manifesto Data Collection: South America. Version 2020b. Berlin: Wissenschaftszentrum Berlin für Sozialforschung (WZB). https://doi.org/10.25522/manifesto.mpdssa.2020b
