--- a/quanteda_script.Rmd
+++ b/quanteda_script.Rmd
@@ -3,7 +3,14 @@ title: "Quanteda Package"
 subtitle: "Sentiment analysis using the Manifesto Corpus"
 author: "Laura Menicacci, Dinah Rabe"
 date: "04/11/2021"
-output: html_document
+output: 
+  html_document:
+  toc: true
+  toc_float: true
+  toc_collapsed: true
+toc_depth: 3
+number_sections: true
+theme: lumen
 ---
 
 ```{r setup, include=FALSE}
@@ -158,7 +165,8 @@ tokenized_manifesto <- scotland_corpus %>%
   tokens() %>% 
   tokens(remove_punct = TRUE, remove_numbers = TRUE) %>%
   tokens_tolower() %>%
-  tokens_remove(stopwords("english")) %>% ##remove will 
+  tokens_remove(stopwords("english")) %>% 
+  tokens_remove(c("will")) %>% #remove will 
   tokens_wordstem()
 
 tokenized_manifesto
@@ -168,12 +176,12 @@ tokenized_manifesto
 
 We are now able to construct our document-feature matrix. 
 
-The ManifestoCorpus requires also some specific polishing regarding cmp codes and the quasi-sentences structuring. 
+The ManifestoCorpus requires also some stardand preprocessing and specific subsetting regarding cmp codes and the quasi-sentences structure. 
 
 In this code snippet we follow this process: 
 - drop all quasi-sentences with headline codes (“H”), uncoded (“0”,“000”) and with codes missing (NA). 
 - group all quasi-sentences coded with the same code to one document
-- transform term frequencies using the `dfm_weight()` function that we use to calculate the proportion of words per document `(scheme = "prop")`.
+- transform term frequencies using the `dfm_weight()` function that to count the proportion of words per document `(scheme = "prop")`.
 - subset the dfm features for three specific codes: **European Union: Positive** (108), **European Union: Negative** (110) and **Federalism** (301). 
 
 ```{r}
@@ -196,15 +204,12 @@ Going through a classical quantitative text analysis, you may want to plot the m
 feature_frequencies_cat <- manifesto_dfm %>% textstat_frequency(n = 10, group = cmp_code)
 
 feature_frequencies_cat %>%
-  mutate(cmp_code = factor(group, labels = c("European Union: Positive", "Federalism", "European Union: Negative"))) %>%
+  mutate(cmp_code = factor(group, labels = c("European Union: Positive", "European Union: Negative", "Federalism"))) %>%
   ggplot(aes(x = reorder(feature, frequency), y = frequency, fill = cmp_code)) +
   geom_col(show.legend = FALSE) +
   labs(x = NULL, y = "share of words per category") +
-  facet_wrap(~cmp_code, ncol = 2, scales = "free_y") +
+  facet_wrap(~cmp_code, ncol = 2, scales = "free") +
   coord_flip()
-
-
-##add counts
 
 ```
 
@@ -226,7 +231,7 @@ scotland_corpus %>%
 
 #Targeted sentiment analysis
 
-Quanteda is also useful if we want to perform sentiment analyises. In the following example we perform targeted sentiment analysis. We use the whole manifesto corpus loaded at the beginning and tokenize it into words. We then keep only tokens that include the word “Brexit” as well as the ten words before and after every occurence of it. 
+Quanteda is also useful if we want to perform sentiment analyisis. In the following example we perform targeted sentiment analysis. We use the whole manifesto corpus loaded at the beginning and tokenize it into words. We then keep only tokens that include the word “Brexit” as well as the ten words before and after every occurence of it. 
 
 We use the sentiment dictionary constructed by Young & Soroka (2012) that is integrated in the package, stored in `data_dictionary_LSD2015`. It contains thousands of positive and negative words or word stems.
 
@@ -245,11 +250,7 @@ print(brexit_sent)
 
 ```
 
----> PLOT SENTIMENT ANALYSIS
-
-Quanteda (and its “sister”-packages quanteda.textstats, quanteda.textplots, quanteda.textmodels) has many more functions. In particular the textstat_* functions of quanteda.textstats are powerful and can well applied to manifestos.
-
-
+#Plotting sentiment analysis
 
 ```{r}
 sent_df <- convert(brexit_sent, to = "data.frame")
@@ -262,11 +263,13 @@ sent_df %>%
   geom_point(size = 3) +
   coord_flip() + 
   labs(x = "Parties", y = "Estimated sentiment")
+ 
 
 ###TO DO
 #CHANGE NAME OF PARTIES
-#COLOUR GRADIENT OF DOTS
-
+#change numbers on x axis
+#subset excel file 
+#change names of parties
 
 ```
 
