--- a/quanteda_script.Rmd
+++ b/quanteda_script.Rmd
@@ -1,27 +1,29 @@
 ---
 title: "Quanteda Package"
-subtitle: "Sentiment analysis using the Manifesto Corpus"
+subtitle: "Sentiment analysis using the Manifesto Corpus" #maybe "Quantitative Text analysis in R using the Manifesto Corpus"
 author: "Laura Menicacci, Dinah Rabe"
 date: "04/11/2021"
 output: 
   html_document:
-  toc: true
-  toc_collapsed: true
-  toc_float: true
-toc_depth: 3
-number_sections: true
-theme: lumen
+    toc: true
+    toc_collapsed: true
+    toc_float: true
+    toc_depth: 3
+    number_sections: false
+    theme: lumen
+    highlight: tango
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 ```
 
 ## Welcome to our tutorial!
 
 In the following minutes we will go through the basics of the **Quanteda** package and make sense of what quantitative text analysis is in practice, with some (hopefully) interesting examples. 
 
-In this session you will learn to: 
+In this session you will learn to:
+
 * load and work with text databases
 * create the basic elements for a proper QTA, namely Corpus, Tokens, and a Document-Feature Matrix
 * proceed with some statistical analyses of texts
@@ -29,7 +31,7 @@ In this session you will learn to:
 
 As already mentioned in the slides, we will make use of the Manifesto Project Database (see more on https://manifesto-project.wzb.eu/). 
 
-Let's start!
+**Let's start!**
 
 ##Necessary packages
 
@@ -38,7 +40,8 @@ Here you find the main packages you'll need to install, plus some recommended on
 ```{r}
 #install.packages("tidyverse")
 #install.packages("quanteda")
-#install.packages("quanteda")
+#install.packages("quanteda.textstats")
+## if you get an error for this, try: install.packages("quanteda.textstats", type="binary")
 ```
 
 
@@ -47,19 +50,21 @@ Here you find the main packages you'll need to install, plus some recommended on
 library(tidyverse)
 library(quanteda)
 
-library(quanteda.textmodels) 
-library(quanteda.textplots)
+# library(quanteda.textmodels) 
+# library(quanteda.textplots)
 library(quanteda.textstats)
 
 library(readtext)
 
 ```
 
+For our tutorial we don't need the other extension packages (.textmodels & .textplots), but maybe you need them for future use cases, so we included them in the code snippet.
+
 # Data Importing
 
-We uploaded on Github the csv version of the Manifesto Project Dataset (latest version), so that you can easily download it and upload it using the following commands. 
+Since we are using the online database of the Manifesto Project for our tutorial, the way we import the data is a bit *special* (using an API-key). Normally, you maybe want to import a pre-formatted file that you have stored on your computer, or multiple files that are stored in a folder. In the following, you find some explanations how to import these kinds of data. 
 
-To import data we use the **readtext** package. 
+As examples we will use the included data of the quanteda package. It is data about the Inaugural Speeches of American Presidents (you will find this data in almost all tutorials that are online).To import data we use the **readtext** package. 
 
 ## Pre-formatted files
 
@@ -81,7 +86,7 @@ Alternatively, it is possible to import character values (comma- or tab-separate
 dat_dail <- readtext(paste0(path_data, "/tsv/dailsample.tsv"), text_field = "speech")
 ```
 
-# Multiple text files
+## Multiple text files
 
 We can also load multiple text files at once that are stored in the same folder or subfolders. Individual text files usually do not contain document-level variables, but we can create them.
 
@@ -114,13 +119,15 @@ To load the Manifesto Corpus, which is a subclass of a `Corpus` object - the one
 
 With the function `mp_setapikey` we can easily load the API key that is needed in order to access the website. We then use the `mp_corpus` function to access documents in the ManifestoCorpus that we can directly use for our analysis.  
 
-As we know from the presentation, a Corpus consists of many documents. In the `ManifestoCorpus`, documents can be indexed via their `manifesto_id`, which is an identification code formed by the CMP party code, an underscore, and either the election year, if unambigous, or the election year and month) or via their position in the corpus. 
+As we know from the presentation, a Corpus consists of many documents. In the `ManifestoCorpus`, documents can be indexed via their `manifesto_id`, which is an identification code formed by the CMP party code, an underscore, and either the election year, if unambiguous, or the election year and month or via their position in the corpus. For further information check their amazing tutorial on [using the Manifesto Corpus with quanteda](https://manifesto-project.wzb.eu/down/tutorials/quanteda)
 
-We will use data from the election programmes in the United Kingdom to perform basic QTA and a sentiment analysis. 
+## Our subset for this tutorial
+We will use data from the election programmes in the United Kingdom to perform some basics of quantitative text analysis and a sentiment analysis. 
 
 We use the quanteda `corpus()` to create the Corpus object from available sources, letting it auto-generate document names based on the manifesto_id and a within document running number, as we can see in `corpus(docid_field = "manifesto_id", unique_docnames = FALSE)`. 
 
 ```{r}
+# install.packages("manifestoR")
 library(manifestoR)
 
 mp_setapikey(key.file = "manifesto_apikey.txt")
@@ -128,7 +135,7 @@ mp_setapikey(key.file = "manifesto_apikey.txt")
 uk_election_programmes <- mp_corpus(countryname == "United Kingdom") 
 
 uk_election_programmes
-names(uk_election_programmes)
+names(uk_election_programmes) #do we want to have that in the html as output?
 
 manifesto_corpus <- uk_election_programmes %>%
   as.data.frame(with.meta = TRUE) %>%
@@ -145,11 +152,11 @@ manifesto_corpus %>%
 
 ```
 
-# Subsetting the Corpus
+## Subsetting the Corpus
 
 We will do the following analyses using only one party in the English parliament. We will take the Scottish National Party, subsetting the corpus with `corpus_subset()` and indicating a logical condition corresponding to the code of the party. 
 
-METTI LINK PER TROVARE I CODICI DEI PARTIES
+METTI LINK PER TROVARE I CODICI DEI PARTIES # i guess that means that we need to inlucde a link where people find the parties codes? ;)
 
 
 ```{r}
@@ -158,7 +165,7 @@ scotland_corpus <- manifesto_corpus %>%
 
 ```
 
-# Tokenization
+## Tokenization
 
 Tokenization is particularly important for pre-processing and cleaning the texts. It is possible to easily remove numbers, punctuation or stopwords. Moreover, it is simple to transform all text to lower case or stem words. 
 
@@ -174,17 +181,18 @@ tokenized_manifesto <- scotland_corpus %>%
 tokenized_manifesto
 ```
 
-# Document-Feature-Matrix
+## Document-Feature-Matrix
 
 We are now able to construct our document-feature matrix. 
 
 The ManifestoCorpus requires also some stardand preprocessing and specific subsetting regarding cmp codes and the quasi-sentences structure. 
 
-In this code snippet we follow this process: 
-- drop all quasi-sentences with headline codes (“H”), uncoded (“0”,“000”) and with codes missing (NA). 
-- group all quasi-sentences coded with the same code to one document
-- transform term frequencies using the `dfm_weight()` function that to count the proportion of words per document `(scheme = "prop")`.
-- subset the dfm features for three specific codes: **European Union: Positive** (108), **European Union: Negative** (110) and **Federalism** (301). 
+In this code snippet we follow this process:
+
+* drop all quasi-sentences with headline codes (“H”), uncoded (“0”,“000”) and with codes missing (NA). 
+* group all quasi-sentences coded with the same code to one document
+* transform term frequencies using the `dfm_weight()` function that to count the proportion of words per document `(scheme = "prop")`.
+* subset the dfm features for three specific codes: **European Union: Positive** (108), **European Union: Negative** (110) and **Federalism** (301). 
 
 ```{r}
 manifesto_dfm <- tokenized_manifesto %>% 
@@ -215,7 +223,7 @@ feature_frequencies_cat %>%
 
 ```
 
-# Keyword in context search 
+## Keyword in context search 
 
 Quanteda also provides an effective method for reading text passages based on  key words. `kwic()` ("keyword in context") allows to do it for a text string or pattern.
 
@@ -233,7 +241,7 @@ scotland_corpus %>%
 
 # Targeted sentiment analysis
 
-Quanteda is also useful if we want to perform sentiment analyisis. In the following example we perform targeted sentiment analysis. We use the whole manifesto corpus loaded at the beginning and tokenize it into words. We then keep only tokens that include the word “Brexit” as well as the ten words before and after every occurence of it. 
+Quanteda is also useful if we want to perform sentiment analysis. In the following example we perform targeted sentiment analysis. We use the whole manifesto corpus loaded at the beginning and tokenize it into words. We then keep only tokens that include the word “Brexit” as well as the ten words before and after every occurrence of it. 
 
 We use the sentiment dictionary constructed by Young & Soroka (2012) that is integrated in the package, stored in `data_dictionary_LSD2015`. It contains thousands of positive and negative words or word stems.
 
@@ -276,9 +284,10 @@ sent_df %>%
 ```
 
 
-## CREDITS 
+# CREDITS 
 
 https://tutorials.quanteda.io
+
 https://github.com/quanteda
 
 Burst, Tobias / Krause, Werner / Lehmann, Pola / Lewandowski, Jirka / Matthieß, Theres / Merz, Nicolas / Regel, Sven / Zehnter, Lisa (2021): Manifesto Corpus. Version: 2021-1. Berlin: WZB Berlin Social Science Center.
